<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/common_spacing">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scrollUpButton"
        style="@style/Widget.AppCompat.TransparentActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_scroll_up_24"
        android:layout_margin="@dimen/small_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:borderWidth="0dp"
        android:contentDescription="@string/scroll_up_description"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipesFavoritesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:clipToPadding="false"
        android:clipChildren="false"
        tools:listitem="@layout/recipe_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clearCuisineFilterButton"
        style="@style/Widget.AppCompat.TransparentActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter_remove_icon_24"
        android:visibility="gone"
        app:borderWidth="0dp"
        android:padding="@dimen/common_spacing"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/clear_cuisine_filter_description" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/emptyFavoritesViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="emptyFavoritesRecipesListImage,emptyFavoritesStateText" />

    <ImageView
        android:id="@+id/emptyFavoritesRecipesListImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/empty_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/empty_recipes_favorites"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emptyFavoritesStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_favorites_state_text"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/emptyFavoritesRecipesListImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>