<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/common_spacing">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scrollUpButton"
        style="@style/Widget.AppCompat.TransparentActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_scroll_up_24"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:borderWidth="0dp"
        android:contentDescription="@string/scroll_up_description"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:clipToPadding="false"
        android:clipChildren="false"
        tools:listitem="@layout/recipe_item" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/emptyRecipesViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="emptyRecipesListImage,emptyStateText" />

    <ImageView
        android:id="@+id/emptyRecipesListImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty_recipes_list" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emptyStateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="@dimen/small_spacing"
        android:layout_marginEnd="@dimen/small_spacing"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/empty_state_text"
        app:layout_constraintTop_toBottomOf="@id/emptyRecipesListImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clearCuisineFilterButton"
        style="@style/Widget.AppCompat.TransparentActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter_remove_icon_24"
        android:visibility="gone"
        app:borderWidth="0dp"
        android:padding="@dimen/common_spacing"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintTop_toTopOf="@+id/addRecipeButton"
        app:layout_constraintBottom_toBottomOf="@id/addRecipeButton"
        app:layout_constraintEnd_toStartOf="@id/addRecipeButton"
        android:contentDescription="@string/clear_cuisine_filter_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        android:padding="@dimen/common_spacing"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/add_recipe_button_description" />
</androidx.constraintlayout.widget.ConstraintLayout>